--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,7 @@
         "laravel/breeze": "^1.19",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7",
-        "srmklive/paypal": "~3.0",
-        "stripe/stripe-php": "^14.9"
+        "laravel/tinker": "^2.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
